<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>tech.derbent</groupId>
	<artifactId>derbent</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<properties>
		<java.version>21</java.version>
		<vaadin.version>24.8.3</vaadin.version>
		<archunit.version>1.4.1</archunit.version>
	</properties>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.0</version>
		<relativePath />
	</parent>

	<repositories>
		<repository>
			<id>vaadin-directory</id>
			<url>https://maven.vaadin.com/vaadin-addons</url>
			<releases>
				<enabled>true</enabled>
				<!-- Do not try to download SO libraries from this repository -->
				<updatePolicy>never</updatePolicy>
			</releases>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-bom</artifactId>
				<version>${vaadin.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>

		<!-- Vaadin Boot Starter (Reflections ≠ plugin override yapılmadan
		gelmesin) -->
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.reflections</groupId>
					<artifactId>reflections</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>control-center-starter</artifactId>
		</dependency>

		<!-- ✅ DOĞRU Reflections sürümü -->
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.9.12</version>
		</dependency>

		<!-- ✅ Reflections 0.9.12'nin ihtiyaç duyduğu doğru Javassist -->
		<dependency>
			<groupId>org.javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.28.0-GA</version>
		</dependency>

		<!-- Spring / JPA -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- Web / Security -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- Validation / Actuator -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<!-- DevTools -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- Tests -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.tngtech.archunit</groupId>
			<artifactId>archunit-junit5</artifactId>
			<version>${archunit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.microsoft.playwright</groupId>
			<artifactId>playwright</artifactId>
			<version>1.40.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>5.9.2</version>
			<scope>test</scope>
		</dependency>
<dependency>
  <groupId>net.sourceforge.pmd</groupId>
  <artifactId>pmd-java</artifactId>
  <version>6.55.0</version>
  <scope>provided</scope>
</dependency>
	</dependencies>

	<build>
		<defaultGoal>spring-boot:run</defaultGoal>
		<plugins>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>tech.derbent.Application</mainClass>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>21</release>
					<showWarnings>true</showWarnings>
					<compilerArgs>
						<arg>-Xlint:all</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<!-- ✅ VAADIN PLUGIN → REFLECTIONS OVERRIDE ZORUNLU -->
			<plugin>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-maven-plugin</artifactId>
				<version>${vaadin.version}</version>
				<configuration>
					<runNpmInstall>true</runNpmInstall>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.reflections</groupId>
						<artifactId>reflections</artifactId>
						<version>0.9.12</version>
					</dependency>
					<dependency>
						<groupId>org.javassist</groupId>
						<artifactId>javassist</artifactId>
						<version>3.28.0-GA</version>
					</dependency>
				</dependencies>
			</plugin>

			<!-- JavaDoc with lenient error handling -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<source>21</source>
					<show>private</show>
					<doclint>none</doclint>
					<quiet>true</quiet>
					<failOnError>false</failOnError>
					<failOnWarnings>false</failOnWarnings>
					<outputDirectory>${project.build.directory}/javadoc</outputDirectory>
					<linksource>true</linksource>
					<detectLinks>true</detectLinks>
					<links>
						<link>https://docs.oracle.com/en/java/javase/21/docs/api/</link>
						<link>https://docs.spring.io/spring-framework/docs/current/javadoc-api/</link>
					</links>
					</configuration>
				</plugin> 

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>3.21.0</version>
					<configuration>
						<rulesets>
							<ruleset>config/pmd/pmd-rules.xml</ruleset>
						</rulesets>						
						<excludes>
							<exclude>**/tech/derbent/api/**</exclude>
						</excludes>
						<failOnViolation>true</failOnViolation>
						<targetJdk>17</targetJdk>
						<typeResolution>false</typeResolution>
					</configuration>
						<executions>
							<execution>
								<id>pmd-enforcement</id>
								<phase>verify</phase>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
				</plugin>
			</plugins>
		</build>

	<organization>
		<name>Lova.tech</name>
		<url>none</url>
	</organization>
	<scm>
		<developerConnection>Yasin Yilmaz</developerConnection>
		<tag>yalovali</tag>
		<connection>yalovali@gmail.com</connection>
	</scm>
	<name>Derbent</name>
	<description>A nice Vaading attempt</description>
</project>
